fix restore dynamic parameters